<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/linearLayoutUpdate"
    tools:context="com.maydana.roman.miepisodio.AddEpisodioActivity">

    <ImageView
        android:id="@+id/fotoAdd_image_button"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:layout_margin="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tituloAdd_edit_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="6"
            android:hint="@string/tituloAdd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lugarAdd_edit_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:hint="@string/lugar"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fechaAdd_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="seleccionFecha"
            android:text="@string/seleccione_fecha"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spinerOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"></Spinner>


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp">
    <EditText
        android:textSize="13dp"
        android:layout_margin="8dp"
        android:id="@+id/descripionAdd_edit_Text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/descripcion" />
    </ScrollView>
    <Button
        android:id="@+id/actualizar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:onClick="actualizar"
        />

</LinearLayout>
