<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context="com.maydana.roman.miepisodio.AddEpisodioActivity">

    <ImageButton
        android:id="@+id/fotoAdd_image_button"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_image_black_24dp"
        android:onClick="insertarImagen"
        android:layout_margin="8dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="6"
            android:id="@+id/tituloAdd_edit_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tituloAdd"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <EditText
            android:layout_weight="4"
            android:id="@+id/lugarAdd_edit_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/lugar"
            android:layout_margin="8dp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fechaAdd_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="seleccionFecha"
            android:text="@string/seleccione_fecha"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinerOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"></Spinner>


    </LinearLayout>

    <EditText
        android:textSize="13dp"
        android:layout_margin="8dp"
        android:id="@+id/descripionAdd_edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion" />

</LinearLayout>
