<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maydana.roman.miepisodio.AcercaDeActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    >
    <ImageView
        android:id="@+id/logoImagenView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_app"
        />
    <ImageView
        android:id="@+id/tituloImagenView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/titulo"
        />
    <TextView
        android:id="@+id/desarroladoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarrollado_por_roman_maydana_callisaya"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/contactoTxt"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_ro_28745_maydana_gmail_com"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/ciudadTxt"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/la_paz_bolivia"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

</LinearLayout>
