<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maydana.roman.miepisodio.DetalleActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"

        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >
            <ImageView
                app:layout_collapseMode="parallax"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/image_detalle_imgView"
                android:contentDescription="Titulo Episodio"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"/>


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:textSize="20sp"
                android:padding="12dp"
                android:text="@string/lugar_del_episodio"
                android:layout_gravity="center_horizontal"
                android:id="@+id/lugar_detalle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_today_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView

                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:text="@string/fecha_del_episodio"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/fecha_detalle_txt"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    />
                
            </LinearLayout>
            <LinearLayout
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_view_day_black_24dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

                <TextView

                    android:id="@+id/categoria_detalle_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:padding="12dp"
                    android:text="@string/categoria_del_episodio"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                android:text="@string/descripcion_del_episodio"
                android:layout_gravity="center_horizontal"
                android:id="@+id/descripcion_detalle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
